Fix sidebar position when the article is too short.

--- a/themes/onepennymedia/stylesheets/style.sass
+++ b/themes/onepennymedia/stylesheets/style.sass
@@ -158,6 +158,9 @@ $sans: Helvetica Neue, Arial, Verdana, sans-serif
     padding-top: 35px
     width: 24.3%
 
+  #sidebar
+    clear: right
+
   #logo img
     margin: 1em 0 0 -5px
     max-width: 100%
